[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/how_to_play.gd" type="Script" id=1]
[ext_resource path="res://fonts/sub_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/plain_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/button_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/button_theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 3 )

[node name="How_to_play" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -401.0
margin_top = -260.0
margin_right = 401.0
margin_bottom = 260.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[node name="Title" type="Label" parent="Background"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "How To Play"
align = 1

[node name="Gameplay" type="Control" parent="Background"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -437.0

[node name="Story" type="Label" parent="Background/Gameplay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.5
margin_right = 85.5
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Story"
align = 1

[node name="Control" type="Control" parent="Background/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0

[node name="Game_explinations" type="Label" parent="Background/Gameplay/Control"]
anchor_bottom = 1.0
margin_left = 49.0
margin_right = 413.0
custom_fonts/font = ExtResource( 4 )
text = "Welcome to the Underworld.

Time to do your chores.

Complete the Labours of Heracles in an
endless labyrinth of chambers. Defeat 
monsters and collect items to get 
stronger to put an end to his penance."

[node name="Keybindings" type="Control" parent="Background"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -437.0

[node name="Title" type="Label" parent="Background/Keybindings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.5
margin_right = 85.5
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Keybindings"
align = 1

[node name="Control" type="Control" parent="Background/Keybindings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0

[node name="Keys" type="Label" parent="Background/Keybindings/Control"]
anchor_bottom = 1.0
margin_left = 49.0
margin_right = 413.0
custom_fonts/font = ExtResource( 4 )
text = "a / left arrow
d / right arrow
s / down arrow
w / up arrow

Spacebar
e
i
Esc


"

[node name="Functions" type="Label" parent="Background/Keybindings/Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -493.0
margin_right = -317.0
custom_fonts/font = ExtResource( 4 )
text = "Move left
Move right
Move down
Move up

Attack
Pick up / Open chest
Toggle inventory
Pause game"

[node name="Inventory" type="Control" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -437.0

[node name="Title" type="Label" parent="Background/Inventory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Inventory"
align = 1

[node name="Control" type="Control" parent="Background/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0

[node name="Explanation" type="Label" parent="Background/Inventory/Control"]
anchor_bottom = 1.0
margin_left = 49.0
margin_right = 467.0
custom_fonts/font = ExtResource( 4 )
text = "Click to pick up item from slot
Click again to put down item in slot

Put item in trash slot and click the
trash icon to trash an item

Press keys 1-5 to equip or consume
item in corresponding hotbar slot
The first slot shows the equipped item"

[node name="Footer" type="Control" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -74.0

[node name="Close" type="Button" parent="Background/Footer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -20.0
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 40 )
focus_neighbour_top = NodePath("../../../Navigation/VBoxContainer/Inventory")
focus_neighbour_bottom = NodePath("../../../Navigation/VBoxContainer/Gameplay")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "Close"

[node name="Control" type="Control" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Navigation" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -188.0

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -42.0
margin_right = 75.0
margin_bottom = 42.0

[node name="Gameplay" type="Button" parent="Navigation/VBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
focus_neighbour_top = NodePath("../../../Background/Footer/Close")
focus_neighbour_bottom = NodePath("../Keybindings")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "Story"

[node name="Keybindings" type="Button" parent="Navigation/VBoxContainer"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 84.0
rect_min_size = Vector2( 150, 40 )
focus_neighbour_top = NodePath("../Gameplay")
focus_neighbour_bottom = NodePath("../Inventory")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "Keybindings"

[node name="Inventory" type="Button" parent="Navigation/VBoxContainer"]
margin_top = 88.0
margin_right = 150.0
margin_bottom = 128.0
rect_min_size = Vector2( 150, 40 )
focus_neighbour_top = NodePath("../Keybindings")
focus_neighbour_bottom = NodePath("../../../Background/Footer/Close")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "Inventory"

[connection signal="pressed" from="Background/Footer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Navigation/VBoxContainer/Gameplay" to="." method="_on_Gameplay_pressed"]
[connection signal="pressed" from="Navigation/VBoxContainer/Keybindings" to="." method="_on_Keybindings_pressed"]
[connection signal="pressed" from="Navigation/VBoxContainer/Inventory" to="." method="_on_Inventory_pressed"]
